# smit-hackathon

./: .env.example  README.md  install_deps.ps1  pyproject.toml
backend/: README.md  agent.py  auth.py  db.py  errors.py  logging_config.py  main.py  models.py  postman_collection.json  pyproject.toml  test.py  test_db.py  tools.py  tools_new.py  utils.py
backend/auth/: models.py  routes.py  security.py
backend/scripts/: create_admin.py
backend/tests/: conftest.py  test_auth.py  test_students.py
frontend/: middleware.ts  package-lock.json  package.json
frontend/app/dashboard/: layout.tsx  page.tsx
frontend/app/dashboard/chat/: page.tsx
frontend/app/dashboard/students/: page.tsx
frontend/app/login/: page.tsx
frontend/utils/: api.ts  auth.ts
postman/: Campus_AI_Admin.postman_collection.json  Campus_AI_Admin_Local.postman_environment.json
